--- a/Produtos/produtos.css
+++ b/Produtos/produtos.css
@@ -35,3 +35,15 @@ img:hover{
     box-shadow: 0px 15px 20px rgba(100, 97, 97, 0.573);
     transition-duration: 0.5s;
 }
+
+@media only screen and (max-width: 768px){
+
+    *{
+        padding: 0px;
+    }
+    #produtos{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+}
